--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,55 @@ h2 {
 
 h3 {
 	font-size: 2.4rem;
+	font-weight: 600;
+	margin-bottom: 4rem;
+}
+
+h4 {
+	font-size: 2.2rem;
+	font-weight: 600;
+	margin-bottom: 2.4rem;
+}
+
+.start {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.progress {
+	margin-bottom: 4rem;
+	display: grid;
+	justify-content: space-between;
+	gap: 1.2rem;
+	grid-template-columns: auto auto;
+	font-size: 1.8rem;
+	color: var(--color-medium);
+}
+
+progress {
+	-webkit-appearance: none;
+	width: 100%;
+	height: 12px;
+	grid-column: 1 / -1;
+}
+
+::-webkit-progress-bar {
+	background-color: var(--color-medium);
+	border-radius: 100px;
+}
+::-webkit-progress-value {
+	background-color: var(--color-theme);
+	border-radius: 100px;
+}
+
+.btn {
+	display: block;
+	font-family: inherit;
+	color: inherit;
+	font-size: 2rem;
+	border: 2px solid var(--color-dark);
+	background-color: var(--color-dark);
 	padding: 1.2rem 2.4rem;
 	cursor: pointer;
 	border-radius: 100px;
